--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,39 @@ img {
 	height:200px;
 }
 
+section {
+	margin:50px 50px;
+}
 
 
+.about-me img{
+	margin-right:30px;
+	margin-bottom: 30px;
+	display: inline-block;
+	float: left;
+}
+
+.about-me h3 {
+	margin-bottom: 20px;
+	text-transform: uppercase;
+	font-weight: bold;
+}
+
+.about-me {
+	float: right;
+}
+
+@media (max-width: 576px) { 
+	.about-me img {
+		float:none;
+		margin: 0 auto;
+		display: block;
+	}
+	section {
+		background-color: red;
+	}
+
+}
 
 
 
