--- a/css/style.css
+++ b/css/style.css
@@ -21,15 +21,19 @@ section {
 	float: left;
 }
 
-.about-me h3 {
+h3 {
 	margin-bottom: 20px;
 	text-transform: uppercase;
 	font-weight: bold;
 }
 
-.about-me {
-	float: right;
-}
+.projects h3 {
+	margin-bottom: 60px;
+} 
+
+
+
+
 
 @media (max-width: 576px) { 
 	.about-me img {
