--- a/css/style.css
+++ b/css/style.css
@@ -28,11 +28,16 @@ h3 {
 }
 
 .projects h3 {
-	margin-bottom: 60px;
+	margin-bottom: 50px;
 } 
 
+.interest h3 {
+	margin-bottom: 40px;
+}
 
-
+.interest img {
+	margin-bottom: 8px;
+}
 
 
 @media (max-width: 576px) { 
