--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,41 @@ h3 {
 	margin-bottom: 8px;
 }
 
+.contact {
+	background-color: #efefef;
+	height: 300px;
+}
+
+.contact h3 {
+	padding-top:30px;
+}
+
+.fa {
+	padding: 20px;
+    font-size: 30px;
+    width: 70px;
+    border-radius: 50%;
+    text-decoration: none;
+    margin: 5px 2px;
+}
+
+.fa-facebook {
+	background: #3B5998;
+    color: white;
+    text-align: center;
+}
+
+.fa-linkedin {
+    background: #007bb5;
+    color: white;
+  	text-align: center;
+}
+
+.fa-google {
+	background: #dd4b39;
+    color: white;
+}
+
 
 @media (max-width: 576px) { 
 	.about-me img {
@@ -49,6 +84,7 @@ h3 {
 	}
 	
 }
+
 
 
 
