--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,21 @@ h3 {
     color: white;
 }
 
+.fa-github{
+	 background-color: none;
+	 color: black;
+	 font-size: 80px;
+	 padding:0;
+}
+
+footer h3 {
+	padding-top: 20px;
+}
+
+footer {
+	background-color: #efefef;
+}
+
 
 @media (max-width: 576px) { 
 	.about-me img {
